crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__fn_ty_annotation_recovery_20.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"a:(str|int) -> i\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "a",
                                    filename: "",
                                    line: 1,
                                    column: 0,
                                    end_line: 1,
                                    end_column: 1,
                                },
                                paths: [],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 16,
                        end_line: 1,
                        end_column: 16,
                    },
                    ty: Some(
                        Node {
                            node: Function(
                                FunctionType {
                                    params_ty: Some(
                                        [
                                            Node {
                                                node: Union(
                                                    UnionType {
                                                        type_elements: [
                                                            Node {
                                                                node: Basic(
                                                                    Str,
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 3,
                                                                end_line: 1,
                                                                end_column: 6,
                                                            },
                                                            Node {
                                                                node: Basic(
                                                                    Int,
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 7,
                                                                end_line: 1,
                                                                end_column: 10,
                                                            },
                                                        ],
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 3,
                                                end_line: 1,
                                                end_column: 10,
                                            },
                                        ],
                                    ),
                                    ret_ty: Some(
                                        Node {
                                            node: Named(
                                                Identifier {
                                                    names: [
                                                        Node {
                                                            node: "i",
                                                            filename: "",
                                                            line: 1,
                                                            column: 15,
                                                            end_line: 1,
                                                            end_column: 16,
                                                        },
                                                    ],
                                                    pkgpath: "",
                                                    ctx: Load,
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 15,
                                            end_line: 1,
                                            end_column: 16,
                                        },
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 16,
                        },
                    ),
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 1,
        },
    ],
    comments: [],
}
